Fix conversion of the shape into a vector selection

We should bake the shape's absolute transform during the conversion

BUG:478735