libs/ui/actions/kis_selection_action_factories.cpp
@@ -545,7 +545,19 @@ void KisShapesToVectorSelectionActionFactory::run(KisViewManager* view)
             hasSelectionShapes = true;
             continue;
         }
-        clonedShapes << shape->cloneShape();
+
+        KoShape *clonedShape = shape->cloneShape();
+
+        /**
+         * The shape is cloned without its parent's transformation, so we should
+         * adjust it manually.
+         */
+        KoShape *oldParentShape = shape->parent();
+        if (oldParentShape && !oldParentShape->absoluteTransformation().isIdentity()) {
+            clonedShape->applyAbsoluteTransformation(oldParentShape->absoluteTransformation());
+        }
+
+        clonedShapes << clonedShape;
     }
 
     if (clonedShapes.isEmpty()) {
